assets/css/custom.css
#profile-pic{
	width:auto;
	height:350px;
	border-radius: 20%;
	padding-bottom: 20px;
}
.logo,
.header-text{
	display: flex;
	justify-content: center;
}

.contact-icon{
	padding: 0 15px;
	font-size: 40px;
	text-decoration: none;
}
a{
	text-decoration: none;
}
.skills-holder {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
  }

  .icons-container {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 20px;
  }
  .icons-container p{
	padding-bottom: 0;
	border-bottom: 0;
	margin-bottom: 0;
  }

  .svg-holder {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 50px;
	height: 50px;
  }

